--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lecture5">
+
+        <activity android:name=".EditActivity"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
